--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-.bkgrd {
+  .bkgrd {
   background-image: url("https://images.unsplash.com/photo-1546448396-6aef80193ceb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80");
   background-attachment:fixed;
   background-repeat:no-repeat;
@@ -10,14 +10,9 @@
 
 }
 
-
-
-h2 {
-    text-align: center;
-  }
-
   h2 {
 
+    text-align: center;
     font-weight: lighter;
     font-size: 35px;
     letter-spacing: 4px;
@@ -25,11 +20,10 @@ h2 {
   }
   
   form {
-    /* background: -webkit-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
-    background: -moz-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
-    background: linear-gradient(bottom, #CCCCCC, #EEEEEE 175px); */
 
-    background: rgba(255, 0, 0, 0.1);
+    /* background: rgba(255, 0, 0, 0.1); */
+
+    background: linear-gradient(to bottom, rgba(255, 0, 0, 0.1), rgba(255, 255, 255, 0.2));
     margin: auto;
     position: relative;
     width: 550px;
@@ -75,18 +69,19 @@ h2 {
   } 
   
   #search-button {
+
     width: 100px;
     position: absolute;
     right: 20px;
     bottom: 20px;
-    color: rgba(255, 0, 0, 0.5);
+    color: rgba(255,255,255, 0.7);
     font-family: 'Lusitana', serif;
-    letter-spacing: 1px;
-    height: 40px;
+    letter-spacing: 0px;
+    height: 50px;
     opacity: .8;
-    border: 2px solid rgba(255, 0, 0, 0.6);
-    background-color: rgba(0, 0, 0, 0);
-    padding: 14px 28px;
+    border: 2px solid  rgba(255,255,255, 0.9);
+    background-color: rgba(255,255,255, 0.3);
+    /* padding: 14px 28px; */
     cursor: pointer;
    
   }
@@ -103,3 +98,12 @@ h2 {
   ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   opacity: 0.5;
 } 
+
+/* .pic1 {
+  
+  content: url(https://images.unsplash.com/photo-1509512693283-8178ed23e04c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=677&q=80);
+  width: 200px;
+
+
+} */
+
