--- a/assets/style.css
+++ b/assets/style.css
@@ -7,25 +7,25 @@
   backface-visibility: hidden;
   animation: slideBg 36s linear infinite 8s;
   animation-timing-function: ease-in-out;
-  background-image: url("assets/images/laughing-bearded-man-holding-hair-and-laughing-3DLGZ7V.jpg");
+  background-image: url("./images/laughing-bearded-man-holding-hair-and-laughing-3DLGZ7V.jpg");
 
 }
 
 @keyframes slideBg {
   0% {
-      background-image: url("assets/images/laughing-bearded-man-holding-hair-and-laughing-3DLGZ7V.jpg");
+      background-image: url("./images/laughing-bearded-man-holding-hair-and-laughing-3DLGZ7V.jpg");
   }
   25% {
-      background-image: url("assets/images/laughing-afro-man-in-sunlight-QLEFV3C.jpg");
+      background-image: url("./images/laughing-afro-man-in-sunlight-QLEFV3C.jpg");
   }
   50% {
-      background-image: url("assets/images/laughing-friends-sitting-on-a-boat-having-drinks-RLZTLFW.jpg");
+      background-image: url("./images/laughing-friends-sitting-on-a-boat-having-drinks-RLZTLFW.jpg");
   }
   75% {
-      background-image: url("assets/images/happy-boy-in-autumn-forest-RB5HWXS.jpg");
+      background-image: url("./images/happy-boy-in-autumn-forest-RB5HWXS.jpg");
   }
   100% {
-      background-image: url("assets/images/laughing-businesswoman-wearing-telephone-headset-QZRU9UA.jpg");
+      background-image: url("./images/laughing-businesswoman-wearing-telephone-headset-QZRU9UA.jpg");
   }
 
 }
