--- a/assets/style.css
+++ b/assets/style.css
@@ -13,19 +13,23 @@
 
 @keyframes slideBg {
   0% {
-      background-image: url("./images/laughing-bearded-man-holding-hair-and-laughing-3DLGZ7V.jpg");
+    background-image: url("./images/laughing-bearded-man-holding-hair-and-laughing-3DLGZ7V.jpg"), url("./images/laughing-afro-man-in-sunlight-QLEFV3C.jpg");
   }
+
   25% {
-      background-image: url("./images/laughing-afro-man-in-sunlight-QLEFV3C.jpg");
+    background-image: url("./images/laughing-afro-man-in-sunlight-QLEFV3C.jpg"), url("./images/laughing-friends-sitting-on-a-boat-having-drinks-RLZTLFW.jpg");
   }
+
   50% {
-      background-image: url("./images/laughing-friends-sitting-on-a-boat-having-drinks-RLZTLFW.jpg");
+    background-image: url("./images/laughing-friends-sitting-on-a-boat-having-drinks-RLZTLFW.jpg"), url("./images/happy-boy-in-autumn-forest-RB5HWXS.jpg");
   }
+
   75% {
-      background-image: url("./images/happy-boy-in-autumn-forest-RB5HWXS.jpg");
+    background-image: url("./images/happy-boy-in-autumn-forest-RB5HWXS.jpg"), url("./images/laughing-businesswoman-wearing-telephone-headset-QZRU9UA.jpg");
   }
+
   100% {
-      background-image: url("./images/laughing-businesswoman-wearing-telephone-headset-QZRU9UA.jpg");
+    background-image: url("./images/laughing-businesswoman-wearing-telephone-headset-QZRU9UA.jpg");
   }
 
 }
@@ -33,13 +37,19 @@
 .card {
   font-family: 'Calistoga', cursive;
   font-size: 20px;
-  color:orangered;
+  color: orangered;
   text-align: center;
 
 }
-#button-addon3{
+
+#button-addon3 {
   margin-left: 40px;
 }
 
-  
+#gifs-appear-here{
+  align-content: center;
+}
 
+.currenLocation{
+  font-size: 5px;
+}
